modal content looking good.  buttons aligned and colors looking good.  glitch solved

--- a/src/Components/Modal.css
+++ b/src/Components/Modal.css
@@ -53,17 +53,21 @@
   }
   
   .modalContainer .footer {
+      width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 920px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .modalContainer .footer button {
     width: 150px;
     height: 45px;
-    margin: 10px;
     border: none;
     background-color: cornflowerblue;
+    margin-top: 10px;
     color: white;
     border-radius: 8px;
     font-size: 20px;
@@ -71,18 +75,32 @@
   }
   
   #cancelBtn {
-    background-color: #E50914;
+    background-color: #3d5afe;
     width: 100%;
+    height: 48px;
     max-width: 920px;
     border-radius: 5px;
     font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 20px !important;
   }
 
   .openModalBtn {
       display: flex;
       align-items: center;
       padding: 3px 20px;
-      background-color: #111    ;
+      background-color: #111;
+      border: none;
+  }
+
+  .openModalBtn .MuiSvgIcon-root {
+      color: white;
+  }
+  .openModalBtn p {
+      color: white;
+      font-weight: 700;
   }
 
   
